--- a/index.html
+++ b/index.html
@@ -3,12 +3,40 @@
   <head>
     <meta charset="utf-8" />
     <title>분류모델</title>
+    <link rel="stylesheet" href="https://fonts.googleapis.com/css2?family=Material+Symbols+Outlined:opsz,wght,FILL,GRAD@24,400,0,0&icon_names=menu" />
+    <script src="https://ajax.googleapis.com/ajax/libs/jquery/2.2.4/jquery.min.js"></script>
+    <style>
+      *{margin:0;padding:0}
+      #container{height:80vh;width:99vw}
+      #mainmenu:hover{cursor:pointer}
+      #view_menu{width:35vw;height:40vw;position:absolute;left:0.5vw;top:0.5vw;
+      border:2px solid gray;border-style:ridge;box-shadow:2px 2px 2px 2px black;
+      display:none}
+    </style>
+    <script>
+      $(()=>{
+        $("#mainmenu").click(()=>{
+          $("#view_menu").css("display","block")
+        })
+        $("#view_menu").on("mouseout",()=>{
+          $("#view_menu").css("display","none")
+        })
+      })
+    </script>
   </head>
   <body>
-    <h2> 이미지 컨볼루션 분류 모델 CNN </h2>
-    
-    <footer>
-      광주컴퓨터기술학원
+    <span id="mainmenu" style="z-index:3;top:1vw;left:0.5vw;font-size:4vw;color:white;position:absolute"
+        class="material-symbols-outlined">menu</span>
+    <div id="view_menu" style="background:red">
+
+    </div>
+    <h2 style="font-size:3vw;padding:1vw 0;text-align:center;background:black;color:white"> 이미지 컨볼루션 분류 모델 CNN </h2>
+    <div id="container"></div>
+    <hr style="margin:0.7vw 1vw">
+    <footer style="text-align:center">
+      helper : 광주컴퓨터기술학원<br>
+      <span style="color:blue">author : dmsgur</span>
+      <span style="color:darkgray"> since : 2024-10-01 ~ </span>
     </footer>
   </body>
   
