--- a/index.html
+++ b/index.html
@@ -32,7 +32,7 @@
     </div>
     <h2 style="font-size:3vw;padding:1vw 0;text-align:center;background:black;color:white"> 이미지 컨볼루션 분류 모델 CNN </h2>
     <div id="container"></div>
-    <img src="https://drive.google.com/file/d/1SOb-eIsSnNrlgICvfJXhvWrMPTv3wxOC/view?usp=drive_link">
+    <img src="https://drive.google.com/drive/folders/1EOxs6fR_KxVERewEvlwg4PtzWy2rsmK1?usp=drive_link/confirm_image_true.png">
     <hr style="margin:0.7vw 1vw">
     <footer style="text-align:center">
       helper : 광주컴퓨터기술학원<br>
