--- a/index.html
+++ b/index.html
@@ -32,7 +32,7 @@
     </div>
     <h2 style="font-size:3vw;padding:1vw 0;text-align:center;background:black;color:white"> 이미지 컨볼루션 분류 모델 CNN </h2>
     <div id="container"></div>
-    <img src="https://photos.fife.usercontent.google.com/pw/AP1GczNKg2Uba7xz4CRV2BkhuaxF_udiP7uJ9NsAlswkG3sASGv3ZJRxK-NS=w620-h827-s-no?authuser=0">
+    <img src="https://i.postimg.cc/QtvYXYw9/confirm-image-true.png">
     <hr style="margin:0.7vw 1vw">
     <footer style="text-align:center">
       helper : 광주컴퓨터기술학원<br>
