--- a/index.html
+++ b/index.html
@@ -12,6 +12,10 @@
       #view_menu{width:35vw;height:40vw;position:absolute;left:0.5vw;top:0.5vw;
       border:2px solid gray;border-style:ridge;box-shadow:2px 2px 2px 2px black;
       display:none}
+      .content{
+        float:left;width:9.5vw;height:9.5vw;border:1px solid gray;
+        opacity:0.7;border-radius:5px
+      }
     </style>
     <script>
       $(()=>{
@@ -31,7 +35,23 @@
 
     </div>
     <h2 style="font-size:3vw;padding:1vw 0;text-align:center;background:black;color:white"> 이미지 컨볼루션 분류 모델 CNN </h2>
-    <div id="container"></div>
+    <p style="text-align:right;margin-right:3vw">
+      <a href="https://github.com/dmsgur/classification_model.git">
+        view git source
+      </a>
+    </p>
+    <div id="container">
+      <div class="content">1</div>
+      <div class="content">2</div>
+      <div class="content">3</div>
+      <div class="content">4</div>
+      <div class="content">5</div>
+      <div class="content">6</div>
+      <div class="content">7</div>
+      <div class="content">8</div>
+      <div class="content">9</div>
+      <div class="content">10</div>
+    </div>
     <hr style="margin:0.7vw 1vw">
     <footer style="text-align:center">
       helper : 광주컴퓨터기술학원<br>
