--- a/index.html
+++ b/index.html
@@ -7,7 +7,7 @@
     <script src="https://ajax.googleapis.com/ajax/libs/jquery/2.2.4/jquery.min.js"></script>
     <style>
       *{margin:0;padding:0}
-      #container{height:80vh;width:99vw}
+      #container{height:75vh;width:99vw}
       #mainmenu:hover{cursor:pointer}
       #view_menu{width:35vw;height:40vw;position:absolute;left:0.5vw;top:0.5vw;
       border:2px solid gray;border-style:ridge;box-shadow:2px 2px 2px 2px black;
@@ -35,7 +35,7 @@
 
     </div>
     <h2 style="font-size:3vw;padding:1vw 0;text-align:center;background:black;color:white"> 이미지 컨볼루션 분류 모델 CNN </h2>
-    <p style="text-align:right;margin-right:3vw">
+    <p style="text-align:right;margin-right:3vw;margin-bottom:0.8vw">
       <a href="https://github.com/dmsgur/classification_model.git">
         view git source
       </a>
