--- a/index.html
+++ b/index.html
@@ -5,6 +5,7 @@
     <title>분류모델</title>
     <link rel="stylesheet" href="https://fonts.googleapis.com/css2?family=Material+Symbols+Outlined:opsz,wght,FILL,GRAD@24,400,0,0&icon_names=menu" />
     <script src="https://ajax.googleapis.com/ajax/libs/jquery/2.2.4/jquery.min.js"></script>
+    <script src="dataset.js"></script>
     <style>
       *{margin:0;padding:0}
       #container{height:75vh;width:99vw}
@@ -17,8 +18,14 @@
         height:15vw;border:1px solid gray;
         opacity:0.7;border-radius:5px
       }
-      .top-cont{height:80%;background:gray}
-      .bottom-cont{height:20%;background:red}
+      .top-cont{height:80%;padding:0.2vw;border-bottom:1px solid gray}
+      .top-cont img{width:100%;height:100%}
+      .bottom-cont{text-align:center;font-size:1vw;height:20%;line-height:300%}
+      .top-cont img:hover{position:relative;width:130%;height:130%}
+      #sub_img img{margin:0.5vw}
+      #sub_img img:hover{z-index:111;
+        position:absolute;width:80%;height:70%;left:2vw;top:10vw
+      }
     </style>
     <script>
       $(()=>{
@@ -29,23 +36,35 @@
           $("#view_menu").css("display","none")
         })
         let inHtml = ""
-        for (let i=0;i<12;i++){
+        for (let i=0;i<data_sets.length;i++){
           inHtml+=`
-            <div class="content">
-            <div class="top-cont"></div>
-            <div class="bottom-cont"></div>
+            <div class="content" num=${i}>
+              <div class="top-cont">${createImageUrl(data_sets[i]["sub_img"][0],3000)}</div>
+              <div class="bottom-cont">${data_sets[i]["sub_title"]}</div>
             </div>
           `        }
         $("#container").html(inHtml)
-        $(".top-cont").click(function(){
+        $(".content").click(function(){
           //$(this)
+          let ix = parseInt($(this).attr("num"))
+          console.log(JSON.stringify(data_sets[ix]))
+          $("#sub_title").text(data_sets[ix].sub_title)
+          $("#sub_content").text(data_sets[ix].sub_content)
+          let image_wsize =
+            data_sets[ix].sub_img.length>5?parseInt(98/data_sets[ix].sub_img.length):19
+          let image_hsize =
+            data_sets[ix].sub_img.length>5?130:280
+          for(url of data_sets[ix].sub_img){
+            $("#sub_img").append(createImageUrl(url,3000,image_wsize,image_hsize))
+          }
+          $("#user_fill").text(data_sets[ix].user_fill)
+          $("#asso_file").text(data_sets[ix].asso_file)
           $("#cover").css("display","block")
           $("#display").css("display","block")
         })
         $("#cover").click(function(){
           $(this).css("display","none")
-          $("#display").css("display","none")
-        })
+          $("#display").css("display","none")})
       })
     </script>
   </head>
@@ -71,14 +90,16 @@
       <span style="color:darkgray"> since : 2024-10-01 ~ </span>
     </footer>
     <div id="cover"></div>
-    <div id="display">
-      <h3 id="sub_title" style="text-align:center;margin:0.8vh 0">모델 구성</h3>
+    <div id="display" style="border:3px solid orange;border-style:inset">
+      <h2 id="sub_title" style="text-align:center;margin:0.8vh 0"></h2>
       <hr style="margin:0 10%;border:2px solid gray;margin-bottom:1vh">
-      <p id="sub_content" style="height:3vh">전처리 기능으로  이미지 표준화</p>
-      <p id="sub_img" >이미지들</p>
-      <p id="user_fill" style="height:3vh;position:relative;top:58vh">의견 : min-max 표준화를 실행하기 위해<br>
-        색상의 최대크기가 255인걸 감안하여 /255. 으로 나눔</p>
+      <p id="sub_content" style="height:3vh;color:blue"></p>
+      <p id="sub_img" ></p>
+      <p id="user_fill" style="height:3vh;position:absolute;bottom:4vh">
+        </p>
+      <p id="asso_file" style="height:3vh;position:absolute;bottom:1vh"></p>
     </div>
+
   </body>
   <style>
     #cover{display:none;z-index:99;margin-left:0.6vw;width:99vw;height:99vh;
@@ -86,4 +107,13 @@
     #display{display:none;z-index:100;padding:1vh;width:90vw;height:79vh;top:10vh;
       left:5vw;position:absolute;background:white;border-radius:1vw}
   </style>
+  <script>
+
+    function createImageUrl(thumbnail_id,w=500,width,height){
+      return `<img src="https://drive.google.com/thumbnail?id=${thumbnail_id}&sz=w${w}" ${width?("width="+width+"%"):""} ${height?("height="+height+"vh"):""}>`
+    }
+    function imagePlace(){
+      createImageUrl($("#thum1"),"17KPamLcwRpk7yZVpjMqqaumfIBL-8R8k")
+    }
+  </script>
 </html>
