--- a/index.html
+++ b/index.html
@@ -3,7 +3,7 @@
   <head>
     <meta charset="utf-8" />
     <title>분류모델</title>
-    <link rel="stylesheet" href="https://fonts.googleapis.com/css2?family=Material+Symbols+Outlined:opsz,wght,FILL,GRAD@24,400,0,0&icon_names=menu" />
+    <link rel="stylesheet" href="https://fonts.googleapis.com/css2?family=Material+Symbols+Outlined:opsz,wght,FILL,GRAD@20..48,100..700,0..1,-50..200" />
     <script src="https://ajax.googleapis.com/ajax/libs/jquery/2.2.4/jquery.min.js"></script>
     <script src="dataset.js"></script>
     <style>
@@ -16,16 +16,18 @@
       .content{margin:0.5vw;
         float:left;width:10vw;
         height:15vw;border:1px solid gray;
-        opacity:0.7;border-radius:5px
+        opacity:0.9;border-radius:5px
       }
       .top-cont{height:80%;padding:0.2vw;border-bottom:1px solid gray}
       .top-cont img{width:100%;height:100%}
-      .bottom-cont{text-align:center;font-size:1vw;height:20%;line-height:300%}
+      .bottom-cont{white-space:nowrap;overflow:hidden;text-overflow:ellipsis;
+      text-align:center;font-size:1vw;height:20%;line-height:300%}
       .top-cont img:hover{position:relative;width:130%;height:130%}
       #sub_img img{margin:0.5vw}
       #sub_img img:hover{z-index:111;
         position:absolute;width:80%;height:70%;left:2vw;top:10vw
       }
+      #display_closer:hover{color:red}
     </style>
     <script>
       $(()=>{
@@ -47,7 +49,6 @@
         $(".content").click(function(){
           //$(this)
           let ix = parseInt($(this).attr("num"))
-          console.log(JSON.stringify(data_sets[ix]))
           $("#sub_title").text(data_sets[ix].sub_title)
           $("#sub_content").text(data_sets[ix].sub_content)
           let image_wsize =
@@ -61,10 +62,16 @@
           $("#asso_file").text(data_sets[ix].asso_file)
           $("#cover").css("display","block")
           $("#display").css("display","block")
+          $("#display_closer").css("display","inline")
         })
         $("#cover").click(function(){
+          $("#sub_img").html("")
           $(this).css("display","none")
-          $("#display").css("display","none")})
+          $("#display").css("display","none")
+          $("#display_closer").css("display","none")})
+         $("#display_closer").click(()=>{
+            $("#cover").trigger("click")
+         })
       })
     </script>
   </head>
@@ -95,15 +102,19 @@
       <hr style="margin:0 10%;border:2px solid gray;margin-bottom:1vh">
       <p id="sub_content" style="height:3vh;color:blue"></p>
       <p id="sub_img" ></p>
-      <p id="user_fill" style="height:3vh;position:absolute;bottom:4vh">
+      <p id="user_fill" style="height:3vh;position:absolute;bottom:6vh">
         </p>
-      <p id="asso_file" style="height:3vh;position:absolute;bottom:1vh"></p>
+      <p id="asso_file" style="height:3vh;position:absolute;bottom:0.5vh"></p>
     </div>
+    <span id="display_closer" class="material-symbols-outlined" style="position:absolute;
+      top:5vw;right:4vw;font-size:2.5vw;z-index:123;cursor:pointer;display:none">
+      close
+    </span>
 
   </body>
   <style>
     #cover{display:none;z-index:99;margin-left:0.6vw;width:99vw;height:99vh;
-      background:yellow;opacity:0.3;position:absolute;top:0;left:0}
+      background:yellow;opacity:0.8;position:absolute;top:0;left:0}
     #display{display:none;z-index:100;padding:1vh;width:90vw;height:79vh;top:10vh;
       left:5vw;position:absolute;background:white;border-radius:1vw}
   </style>
