--- a/index.html
+++ b/index.html
@@ -31,11 +31,16 @@
       }
       #display_closer:hover{color:red}
       a{color:blue;text-decoration:none}
+      #tips{padding-left:1vw;font-size:1vw;color:DarkMagenta;position:absolute;bottom:3vw}
     </style>
     <script>
       $(()=>{
-        for (mobj of menu_sets){
-          $("#view_menu").append(`<p style="margin-top:2.5vw"><a class='menus' href="${mobj.url}"> ${mobj.mtitle} </a></p>`)
+        for (let i=0;i<menu_sets.length;i++){
+          let ele = $(`<p style="margin-top:2.5vw" ix=${i}><a class='menus' href="${menu_sets[i].url}"> ${menu_sets[i].mtitle} </a></p>`)
+          $("#menubar").append(ele)
+          ele.on("mouseover",function(){
+            $("#tips").text(menu_sets[i].tips)
+          })
         }
         $("#mainmenu").click(()=>{
          $("#view_menu").animate({left:"0.2vw"},500)
@@ -96,6 +101,8 @@
         top:0.4vw;left:27vw;font-size:2.5vw;z-index:456;cursor:pointer">
         close
       </span>
+      <div id="menubar"></div>
+      <div id="tips"></div>
     </div>
     <h2 style="font-size:3vw;padding:1vw 0;text-align:center;background:black;color:white"> 이미지 컨볼루션 분류 모델 CNN </h2>
     <p style="text-align:right;margin-right:3vw;margin-bottom:0.8vw">
