--- a/race.html
+++ b/race.html
@@ -16,6 +16,7 @@
     </style>
 </head>
 <body>
+    <a style="position:absolute;right:1vw" id="backbtn" href="#"> 이전으로 </a>
     <div id="gameContainer">
         <h1 style="text-align: center;font-size:1.5rem"> 경주 게임 월드에 오신것을 환영합니다. <span id="keydisplay"></span> </h1>
         <label>게임머니 <input name="money" type="number" id="mymoney"></label>
@@ -40,6 +41,10 @@
 </body>
 </html>
 <script>
+    let backbtn = document.getElementById("backbtn")
+    backbtn.addEventListener(function(){
+        history.back()
+    })
     tuttle_img_id = "1_dOb29iZ8IqdGY1Si8Zgq_75s9iBNrlk"
     rabbit_img_id = "1V7RNGluG89IxAU9oiR2tSJMRpDZUAnih"
     hen_img_id = "18JxpNStneFXOzeGcSLPfOMb_gNIfhykM"
